Fix alignment of a button-group caption
Former-commit-id: 2ef9352ac8378cb4a1799522512d725b6a9dd6c5

--- a/components/button-group/button-group.scss
+++ b/components/button-group/button-group.scss
@@ -26,7 +26,7 @@
 .ring-button-group__caption {
   @include ring-font();
   margin-right: $ring-unit;
-  vertical-align: middle;
+  vertical-align: sub;
 
   &:empty {
     margin-right: 0;
